Kubernetes/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"   # same as management.server.port
    spec:
      containers:
        - name: backend
          image: your-image
          ports:
            - containerPort: 8080
            - containerPort: 8081
